{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 31,
  "lineage": "38658d98-7a5d-7d06-4450-b2b2388c0fa0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudforce_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:internet-gateway/igw-00a932f25aa2dc188",
            "id": "igw-00a932f25aa2dc188",
            "owner_id": "475233874405",
            "tags": {
              "Name": "cloudforce_igw"
            },
            "tags_all": {
              "Name": "cloudforce_igw"
            },
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:loadbalancer/app/backend-lb/7e7db34caeeb180e",
            "arn_suffix": "app/backend-lb/7e7db34caeeb180e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-backend-lb-821140837.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:475233874405:loadbalancer/app/backend-lb/7e7db34caeeb180e",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02b1964a947416ed4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00983e4dabdd95913"
              },
              {
                "subnet_id": "subnet-082db5549c1275990"
              }
            ],
            "subnets": [
              "subnet-00983e4dabdd95913",
              "subnet-082db5549c1275990"
            ],
            "vpc_id": "vpc-0ed1a45b26e453032",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lbsecuritygroupB",
            "aws_subnet.cloudforce_private1",
            "aws_subnet.cloudforce_private2",
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:loadbalancer/app/frontend-lb/f71bca034e30349b",
            "arn_suffix": "app/frontend-lb/f71bca034e30349b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-lb-204869928.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:475233874405:loadbalancer/app/frontend-lb/f71bca034e30349b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02b1964a947416ed4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e420b91b37dd92e4"
              },
              {
                "subnet_id": "subnet-0e9fe298b01a897a6"
              }
            ],
            "subnets": [
              "subnet-0e420b91b37dd92e4",
              "subnet-0e9fe298b01a897a6"
            ],
            "vpc_id": "vpc-0ed1a45b26e453032",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lbsecuritygroupB",
            "aws_subnet.cloudforce_public1",
            "aws_subnet.cloudforce_public2",
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backendListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:listener/app/backend-lb/7e7db34caeeb180e/354fa5b95e6ca9c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:targetgroup/backendTG/40c8f0e981c884ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:475233874405:listener/app/backend-lb/7e7db34caeeb180e/354fa5b95e6ca9c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:loadbalancer/app/backend-lb/7e7db34caeeb180e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend_lb",
            "aws_lb_target_group.backendTG",
            "aws_security_group.lbsecuritygroupB",
            "aws_subnet.cloudforce_private1",
            "aws_subnet.cloudforce_private2",
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontendListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:listener/app/frontend-lb/f71bca034e30349b/09a62c2ac980af3f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:targetgroup/frontendTG/b0a31594b225f9b4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:475233874405:listener/app/frontend-lb/f71bca034e30349b/09a62c2ac980af3f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:loadbalancer/app/frontend-lb/f71bca034e30349b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend_lb",
            "aws_lb_target_group.frontendTG",
            "aws_security_group.lbsecuritygroupB",
            "aws_subnet.cloudforce_public1",
            "aws_subnet.cloudforce_public2",
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backendTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:targetgroup/backendTG/40c8f0e981c884ee",
            "arn_suffix": "targetgroup/backendTG/40c8f0e981c884ee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 240,
                "matcher": "200",
                "path": "/health",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:475233874405:targetgroup/backendTG/40c8f0e981c884ee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backendTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontendTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:475233874405:targetgroup/frontendTG/b0a31594b225f9b4",
            "arn_suffix": "targetgroup/frontendTG/b0a31594b225f9b4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:475233874405:targetgroup/frontendTG/b0a31594b225f9b4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontendTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "cloudforce_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a932f25aa2dc188",
            "id": "r-rtb-089c5cc78a4d876241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089c5cc78a4d87624",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloudforce_igw",
            "aws_route_table.cloudforce_rtb",
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudforce_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:route-table/rtb-089c5cc78a4d87624",
            "id": "rtb-089c5cc78a4d87624",
            "owner_id": "475233874405",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cloudforce_rtb"
            },
            "tags_all": {
              "Name": "cloudforce_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudforce_rtb_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05742a3ea435a030a",
            "route_table_id": "rtb-089c5cc78a4d87624",
            "subnet_id": "subnet-0e9fe298b01a897a6"
          },
          "dependencies": [
            "aws_route_table.cloudforce_rtb",
            "aws_subnet.cloudforce_public1",
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudforce_rtb_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054768a66ec7f4abd",
            "route_table_id": "rtb-089c5cc78a4d87624",
            "subnet_id": "subnet-0e420b91b37dd92e4"
          },
          "dependencies": [
            "aws_route_table.cloudforce_rtb",
            "aws_subnet.cloudforce_public2",
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databasesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:security-group/sg-09a599736df837680",
            "description": "Security group for database servers",
            "egress": [],
            "id": "sg-09a599736df837680",
            "ingress": [],
            "name": "Databasesecuritygroup",
            "name_prefix": "",
            "owner_id": "475233874405",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Databasesecuritygroup"
            },
            "tags_all": {
              "Name": "Databasesecuritygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instancesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:security-group/sg-018342681f4690d92",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-02b1964a947416ed4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018342681f4690d92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b1964a947416ed4"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b1964a947416ed4"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b1964a947416ed4"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02b1964a947416ed4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instancesg",
            "name_prefix": "",
            "owner_id": "475233874405",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lbsecuritygroupB",
            "aws_vpc.cloudforce_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lbsecuritygroupB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:security-group/sg-02b1964a947416ed4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b1964a947416ed4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lbsecuritygroupB",
            "name_prefix": "",
            "owner_id": "475233874405",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "databasesg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-4004398850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a599736df837680",
            "security_group_rule_id": "sgr-031c080415f5dcd6f",
            "self": false,
            "source_security_group_id": "sg-018342681f4690d92",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.databasesg",
            "aws_security_group.instancesg",
            "aws_security_group.lbsecuritygroupB",
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:subnet/subnet-082db5549c1275990",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082db5549c1275990",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475233874405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_private1"
            },
            "tags_all": {
              "Name": "cloudforce_private1"
            },
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:subnet/subnet-00983e4dabdd95913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00983e4dabdd95913",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475233874405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_private2"
            },
            "tags_all": {
              "Name": "cloudforce_private2"
            },
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:subnet/subnet-07b8f2322b878625c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b8f2322b878625c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475233874405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_private3"
            },
            "tags_all": {
              "Name": "cloudforce_private3"
            },
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:subnet/subnet-0d4b9f447f0a483e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4b9f447f0a483e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475233874405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_private4"
            },
            "tags_all": {
              "Name": "cloudforce_private4"
            },
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:subnet/subnet-0e9fe298b01a897a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9fe298b01a897a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475233874405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_public1"
            },
            "tags_all": {
              "Name": "cloudforce_public1"
            },
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforce_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:subnet/subnet-0e420b91b37dd92e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e420b91b37dd92e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475233874405",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudforce_public2"
            },
            "tags_all": {
              "Name": "cloudforce_public2"
            },
            "vpc_id": "vpc-0ed1a45b26e453032"
          },
          "dependencies": [
            "aws_vpc.cloudforce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudforce_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:475233874405:vpc/vpc-0ed1a45b26e453032",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0efc7db5925309e13",
            "default_route_table_id": "rtb-076eff6dac2b8e8ff",
            "default_security_group_id": "sg-0c3c740de58aecb13",
            "dhcp_options_id": "dopt-08c587e1ab3140eff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed1a45b26e453032",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076eff6dac2b8e8ff",
            "owner_id": "475233874405",
            "tags": {
              "Name": "cloudforce_vpc"
            },
            "tags_all": {
              "Name": "cloudforce_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}